langutils/sc_parser/src/sc_grammar_parser.output
Terminals unused in grammar

    CURRYARG
    DOTDOT
    BADTOKEN
    LEFTARROW
    LEXER_ERROR


Grammar

    0 $accept: go $end

    1 go: INTERPRET region semicolon.opt
    2   | classOrExtList.list

    3 region: expr.error
    4       | region SEMICOLON expr.error
    5       | region error
    6       | region REGION_SEPARATOR expr.error

    7 expr.error: expr
    8           | error

    9 classOrExtList.list: classOrExtList.item
   10                    | classOrExtList.list classOrExtList.item

   11 classOrExtList.item: class
   12                    | class.extension

   13 class: CLASSNAME class.slot.opt class.super.opt OPENCURLY class.vars.opt method.list.opt CLOSECURLY

   14 class.super.opt: ε
   15                | COLON CLASSNAME

   16 class.slot.opt: ε
   17               | OPENSQUARE name CLOSESQUARE

   18 class.extension: ADD CLASSNAME OPENCURLY method.list.opt CLOSECURLY

   19 class.vars.entry.item: accessor variable_declarations.list.item

   20 class.vars.entry.list: class.vars.entry.item
   21                      | class.vars.entry.list COMMA class.vars.entry.item

   22 class.vars.entry: CLASSVAR class.vars.entry.list
   23                 | VAR class.vars.entry.list
   24                 | CONST class.vars.entry.list

   25 class.vars: class.vars.entry
   26           | class.vars SEMICOLON class.vars.entry

   27 class.vars.opt: ε
   28               | class.vars semicolon.opt

   29 method.name: name
   30            | binary_op.raw

   31 method.base: method.name OPENCURLY argument_declarations.opt block.contents semicolon.opt CLOSECURLY
   32            | method.name OPENCURLY argument_declarations.opt CLOSECURLY
   33            | method.name OPENCURLY argument_declarations.opt PRIMITIVENAME block.contents semicolon.opt CLOSECURLY
   34            | method.name OPENCURLY argument_declarations.opt PRIMITIVENAME CLOSECURLY

   35 method: method.base
   36       | MULTIPLY method.base

   37 method.list: method
   38            | method.list method

   39 method.list.opt: ε
   40                | method.list

   41 block.open: OPENCURLY
   42           | BEGINCLOSEDFUNC

   43 block: block.open argument_declarations.opt block.contents semicolon.opt CLOSECURLY
   44      | block.open argument_declarations.opt CLOSECURLY

   45 block.opt_list: ε
   46               | block.list

   47 block.list: block
   48           | block.list block

   49 block.contents: block.contents.item
   50               | block.contents SEMICOLON block.contents.item

   51 block.contents.item: expr
   52                    | variable_declarations
   53                    | NONLOCALRETURN expr

   54 msgsend: OPENPAREN binary_op.no_adverb CLOSEPAREN OPENPAREN arguments CLOSEPAREN block.opt_list
   55        | OPENPAREN binary_op.no_adverb CLOSEPAREN OPENPAREN CLOSEPAREN block.list
   56        | OPENPAREN binary_op.no_adverb CLOSEPAREN block.list
   57        | name OPENPAREN arguments CLOSEPAREN block.opt_list
   58        | name OPENPAREN CLOSEPAREN block.list
   59        | name block.list
   60        | expr DOT name arguments.maybe_paren block.opt_list
   61        | expr DOT arguments.paren block.opt_list
   62        | expr DOT OPENPAREN CLOSEPAREN block.opt_list
   63        | expr DOT error
   64        | CLASSNAME OPENSQUARE literal.array.contents CLOSESQUARE
   65        | CLASSNAME block.list
   66        | CLASSNAME OPENPAREN arguments CLOSEPAREN block.opt_list
   67        | CLASSNAME OPENPAREN CLOSEPAREN block.opt_list

   68 expr.base: literal
   69          | name
   70          | msgsend
   71          | OPENPAREN expr.seq CLOSEPAREN
   72          | TILDE name
   73          | expr.base OPENSQUARE arguments CLOSESQUARE
   74          | expr.base OPENSQUARE CLOSESQUARE

   75 expr: expr.base
   76     | CLASSNAME
   77     | expr DOT OPENSQUARE arguments CLOSESQUARE
   78     | expr DOT OPENSQUARE CLOSESQUARE
   79     | BACKTICK expr
   80     | expr binary_op expr
   81     | name EQUALSSIGN expr
   82     | TILDE name EQUALSSIGN expr
   83     | expr DOT name EQUALSSIGN expr
   84     | name OPENPAREN arguments CLOSEPAREN EQUALSSIGN expr
   85     | expr.base OPENSQUARE arguments CLOSESQUARE EQUALSSIGN expr
   86     | expr.base OPENSQUARE CLOSESQUARE EQUALSSIGN expr
   87     | expr DOT OPENSQUARE arguments CLOSESQUARE EQUALSSIGN expr
   88     | expr DOT OPENSQUARE CLOSESQUARE EQUALSSIGN expr

   89 expr.seq.base: expr
   90              | expr.seq.base SEMICOLON expr

   91 expr.seq: expr.seq.base semicolon.opt

   92 adverb: DOT name
   93       | DOT integer
   94       | DOT OPENPAREN expr.seq CLOSEPAREN

   95 argument_declarations.list: name
   96                           | name EQUALSSIGN literal
   97                           | name OPENPAREN expr.seq CLOSEPAREN
   98                           | name EQUALSSIGN OPENPAREN expr.seq CLOSEPAREN
   99                           | argument_declarations.list COMMA name
  100                           | argument_declarations.list COMMA name EQUALSSIGN literal
  101                           | argument_declarations.list COMMA name OPENPAREN expr.seq CLOSEPAREN
  102                           | argument_declarations.list COMMA name EQUALSSIGN OPENPAREN expr.seq CLOSEPAREN

  103 argument_declarations.pipelist: name literal
  104                               | name
  105                               | name EQUALSSIGN literal
  106                               | name OPENPAREN expr.seq CLOSEPAREN
  107                               | name EQUALSSIGN OPENPAREN expr.seq CLOSEPAREN
  108                               | argument_declarations.pipelist comma.opt name literal
  109                               | argument_declarations.pipelist comma.opt name
  110                               | argument_declarations.pipelist comma.opt name EQUALSSIGN literal
  111                               | argument_declarations.pipelist comma.opt name OPENPAREN expr.seq CLOSEPAREN
  112                               | argument_declarations.pipelist comma.opt name EQUALSSIGN OPENPAREN expr.seq CLOSEPAREN

  113 argument_declarations: ARG SEMICOLON
  114                      | ARG argument_declarations.list comma.opt SEMICOLON
  115                      | ARG argument_declarations.list ELLIPSIS name SEMICOLON
  116                      | ARG argument_declarations.list ELLIPSIS name COMMA name SEMICOLON
  117                      | PIPE PIPE
  118                      | PIPE argument_declarations.pipelist comma.opt PIPE
  119                      | PIPE argument_declarations.pipelist ELLIPSIS name PIPE
  120                      | PIPE argument_declarations.pipelist ELLIPSIS name COMMA name PIPE

  121 argument_declarations.opt: ε
  122                          | argument_declarations

  123 variable_declarations.list.item: name
  124                                | name EQUALSSIGN expr
  125                                | name OPENPAREN expr.seq CLOSEPAREN

  126 variable_declarations.list: variable_declarations.list.item
  127                           | variable_declarations.list COMMA variable_declarations.list.item

  128 variable_declarations: VAR variable_declarations.list comma.opt

  129 arguments.entries: KEYBINOP expr.seq
  130                  | MULTIPLY expr.seq
  131                  | expr.seq

  132 arguments.no_trailing: arguments.entries
  133                      | arguments.no_trailing COMMA arguments.entries

  134 arguments: arguments.no_trailing comma.opt

  135 arguments.paren: OPENPAREN arguments CLOSEPAREN

  136 arguments.maybe_paren: ε
  137                      | arguments.paren

  138 literal.terminal: symbol
  139                 | string
  140                 | integer
  141                 | float
  142                 | boolean
  143                 | nil
  144                 | ascii
  145                 | block

  146 literal.array.contents: ε
  147                       | expr.seq
  148                       | expr.seq COLON expr.seq
  149                       | KEYBINOP expr.seq
  150                       | literal.array.contents COMMA expr.seq
  151                       | literal.array.contents COMMA expr.seq COLON expr.seq
  152                       | literal.array.contents COMMA KEYBINOP expr.seq

  153 literal.dictionary.entry: expr.seq COLON expr.seq
  154                         | KEYBINOP expr.seq

  155 literal.dictionary.entries: ε
  156                           | literal.dictionary.entry
  157                           | literal.dictionary.entries COMMA literal.dictionary.entry

  158 literal.dictionary: OPENPAREN literal.dictionary.entries comma.opt CLOSEPAREN

  159 literal.array: OPENSQUARE literal.array.contents comma.opt CLOSESQUARE
  160              | HASH OPENSQUARE literal.array.contents comma.opt CLOSESQUARE

  161 literal: literal.terminal
  162        | literal.array
  163        | literal.dictionary

  164 name: NAME

  165 binary_op.raw: BINOP
  166              | READWRITEVAR
  167              | LESSTHAN
  168              | GREATERTHAN
  169              | MINUS
  170              | MULTIPLY
  171              | ADD
  172              | PIPE

  173 binary_op.no_adverb: binary_op.raw
  174                    | KEYBINOP

  175 binary_op: binary_op.no_adverb adverb
  176          | binary_op.no_adverb

  177 semicolon.opt: ε
  178              | SEMICOLON

  179 comma.opt: ε
  180          | COMMA

  181 ascii: ASCII

  182 nil: NIL

  183 boolean: TRUE
  184        | FALSE

  185 symbol: SYMBOL_QUOTE
  186       | SYMBOL_SLASH

  187 string: STRINGLINE
  188       | string STRINGLINE

  189 integer: INTEGER
  190        | INTEGER_RADIX
  191        | HEXADECIMAL
  192        | MINUS integer

  193 float.raw_unsigned: FLOAT
  194                   | FLOAT_RADIX
  195                   | FLOAT_EXPONENT
  196                   | FLOAT_INF

  197 float.raw: float.raw_unsigned
  198          | MINUS float.raw_unsigned

  199 accidental.unsigned: ACCIDENTAL_STEPS
  200                    | ACCIDENTAL_CENTS

  201 accidental: accidental.unsigned
  202           | MINUS accidental.unsigned

  203 float: float.raw
  204      | accidental
  205      | float.raw PI
  206      | integer PI
  207      | PI
  208      | MINUS PI

  209 accessor: ε
  210         | LESSTHAN
  211         | READWRITEVAR
  212         | GREATERTHAN


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 8 63
    REGION_SEPARATOR <LexerToken> (258) 6
    OPENCURLY <LexerToken> (259) 13 18 31 32 33 34 41
    CLOSECURLY <LexerToken> (260) 13 18 31 32 33 34 43 44
    OPENSQUARE <LexerToken> (261) 17 64 73 74 77 78 85 86 87 88 159 160
    CLOSESQUARE <LexerToken> (262) 17 64 73 74 77 78 85 86 87 88 159 160
    OPENPAREN <LexerToken> (263) 54 55 56 57 58 62 66 67 71 84 94 97 98 101 102 106 107 111 112 125 135 158
    CLOSEPAREN <LexerToken> (264) 54 55 56 57 58 62 66 67 71 84 94 97 98 101 102 106 107 111 112 125 135 158
    SEMICOLON <LexerToken> (265) 4 26 50 90 113 114 115 116 178
    NONLOCALRETURN <LexerToken> (266) 53
    COMMA <LexerToken> (267) 21 99 100 101 102 116 120 127 133 150 151 152 157 180
    HASH <LexerToken> (268) 160
    TILDE <LexerToken> (269) 72 82
    NAME <LexerToken> (270) 164
    INTEGER <LexerToken> (271) 189
    INTEGER_RADIX <LexerToken> (272) 190
    HEXADECIMAL <LexerToken> (273) 191
    FLOAT <LexerToken> (274) 193
    FLOAT_RADIX <LexerToken> (275) 194
    FLOAT_EXPONENT <LexerToken> (276) 195
    FLOAT_INF <LexerToken> (277) 196
    ACCIDENTAL_STEPS <LexerToken> (278) 199
    ACCIDENTAL_CENTS <LexerToken> (279) 200
    SYMBOL_QUOTE <LexerToken> (280) 185
    SYMBOL_SLASH <LexerToken> (281) 186
    STRINGLINE <LexerToken> (282) 187 188
    ASCII <LexerToken> (283) 181
    PRIMITIVENAME <LexerToken> (284) 33 34
    CLASSNAME <LexerToken> (285) 13 15 18 64 65 66 67 76
    CURRYARG <LexerToken> (286)
    VAR <LexerToken> (287) 23 128
    ARG <LexerToken> (288) 113 114 115 116
    CLASSVAR <LexerToken> (289) 22
    CONST <LexerToken> (290) 24
    NIL <LexerToken> (291) 182
    TRUE <LexerToken> (292) 183
    FALSE <LexerToken> (293) 184
    PI <LexerToken> (294) 205 206 207 208
    ELLIPSIS <LexerToken> (295) 115 116 119 120
    DOTDOT <LexerToken> (296)
    BEGINCLOSEDFUNC <LexerToken> (297) 42
    BADTOKEN <LexerToken> (298)
    INTERPRET <LexerToken> (299) 1
    LEFTARROW <LexerToken> (300)
    LEXER_ERROR <LexerToken> (301)
    COLON <LexerToken> (302) 15 148 151 153
    EQUALSSIGN <LexerToken> (303) 81 82 83 84 85 86 87 88 96 98 100 102 105 107 110 112 124
    BINOP <LexerToken> (304) 165
    KEYBINOP <LexerToken> (305) 129 149 152 154 174
    MINUS <LexerToken> (306) 169 192 198 202 208
    LESSTHAN <LexerToken> (307) 167 210
    GREATERTHAN <LexerToken> (308) 168 212
    MULTIPLY <LexerToken> (309) 36 130 170
    ADD <LexerToken> (310) 18 171
    PIPE <LexerToken> (311) 117 118 119 120 172
    READWRITEVAR <LexerToken> (312) 166 211
    DOT <LexerToken> (313) 60 61 62 63 77 78 83 87 88 92 93 94
    BACKTICK <LexerToken> (314) 79
    UMINUS <LexerToken> (315)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    go <ClassListOrExprListIndex> (62)
        on left: 1 2
        on right: 0
    region <RegionListIndex> (63)
        on left: 3 4 5 6
        on right: 1 4 5 6
    expr.error <error_index<ExprSeqIndex>> (64)
        on left: 7 8
        on right: 3 4 6
    classOrExtList.list <ClassOrExtensionListIndex> (65)
        on left: 9 10
        on right: 2 10
    classOrExtList.item <ClassOrExtensionIndex> (66)
        on left: 11 12
        on right: 9 10
    class <ClassIndex> (67)
        on left: 13
        on right: 11
    class.super.opt <maybe<ClassNameIdentifierIndex>> (68)
        on left: 14 15
        on right: 13
    class.slot.opt <maybe<NamedIdentifierIndex>> (69)
        on left: 16 17
        on right: 13
    class.extension <ClassExtensionIndex> (70)
        on left: 18
        on right: 12
    class.vars.entry.item <DeclareClassVarIndex> (71)
        on left: 19
        on right: 20 21
    class.vars.entry.list <DeclareMemberListIndex> (72)
        on left: 20 21
        on right: 21 22 23 24
    class.vars.entry <DeclareAnyList> (73)
        on left: 22 23 24
        on right: 25 26
    class.vars <DeclareClassAnyVarListIndex> (74)
        on left: 25 26
        on right: 26 28
    class.vars.opt <DeclareClassAnyVarListIndex> (75)
        on left: 27 28
        on right: 13
    method.name <MethodNameIndex> (76)
        on left: 29 30
        on right: 31 32 33 34
    method.base <MethodIndex> (77)
        on left: 31 32 33 34
        on right: 35 36
    method <AnyMethodIndex> (78)
        on left: 35 36
        on right: 37 38
    method.list <MethodListIndex> (79)
        on left: 37 38
        on right: 38 40
    method.list.opt <MethodListIndex> (80)
        on left: 39 40
        on right: 13 18
    block.open (81)
        on left: 41 42
        on right: 43 44
    block <BlockIndex> (82)
        on left: 43 44
        on right: 47 48 145
    block.opt_list <BlockListIndex> (83)
        on left: 45 46
        on right: 54 57 60 61 62 66 67
    block.list <BlockListIndex> (84)
        on left: 47 48
        on right: 46 48 55 56 58 59 65
    block.contents <BlockContentsListIndex> (85)
        on left: 49 50
        on right: 31 33 43 50
    block.contents.item <BlockItemIndex> (86)
        on left: 51 52 53
        on right: 49 50
    msgsend <ExprSeqIndex> (87)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 70
    expr.base <ExprSeqIndex> (88)
        on left: 68 69 70 71 72 73 74
        on right: 73 74 75 85 86
    expr <ExprSeqIndex> (89)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 7 51 53 60 61 62 63 77 78 79 80 81 82 83 84 85 86 87 88 89 90 124
    expr.seq.base <ExprSeqIndex> (90)
        on left: 89 90
        on right: 90 91
    expr.seq <ExprSeqIndex> (91)
        on left: 91
        on right: 71 94 97 98 101 102 106 107 111 112 125 129 130 131 147 148 149 150 151 152 153 154
    adverb <AdverbIndex> (92)
        on left: 92 93 94
        on right: 175
    argument_declarations.list <DeclareArgumentListIndex> (93)
        on left: 95 96 97 98 99 100 101 102
        on right: 99 100 101 102 114 115 116
    argument_declarations.pipelist <DeclareArgumentListIndex> (94)
        on left: 103 104 105 106 107 108 109 110 111 112
        on right: 108 109 110 111 112 118 119 120
    argument_declarations <DeclareArgumentListIndex> (95)
        on left: 113 114 115 116 117 118 119 120
        on right: 122
    argument_declarations.opt <DeclareArgumentListIndex> (96)
        on left: 121 122
        on right: 31 32 33 34 43 44
    variable_declarations.list.item <DeclareAnyVariableIndex> (97)
        on left: 123 124 125
        on right: 19 126 127
    variable_declarations.list <DeclareVariableListIndex> (98)
        on left: 126 127
        on right: 127 128
    variable_declarations <DeclareVariableListIndex> (99)
        on left: 128
        on right: 52
    arguments.entries <ArgumentEntryIndex> (100)
        on left: 129 130 131
        on right: 132 133
    arguments.no_trailing <ArgumentListIndex> (101)
        on left: 132 133
        on right: 133 134
    arguments <ArgumentListIndex> (102)
        on left: 134
        on right: 54 57 66 73 77 84 85 87 135
    arguments.paren <ArgumentListIndex> (103)
        on left: 135
        on right: 61 137
    arguments.maybe_paren <ArgumentListIndex> (104)
        on left: 136 137
        on right: 60
    literal.terminal <AnyLiteralIndex> (105)
        on left: 138 139 140 141 142 143 144 145
        on right: 161
    literal.array.contents <ArrayIndex> (106)
        on left: 146 147 148 149 150 151 152
        on right: 64 150 151 152 159 160
    literal.dictionary.entry <DictionaryEntryIndex> (107)
        on left: 153 154
        on right: 156 157
    literal.dictionary.entries <DictionaryIndex> (108)
        on left: 155 156 157
        on right: 157 158
    literal.dictionary <DictionaryIndex> (109)
        on left: 158
        on right: 163
    literal.array <ArrayIndex> (110)
        on left: 159 160
        on right: 162
    literal <AnyLiteralIndex> (111)
        on left: 161 162 163
        on right: 68 96 100 103 105 108 110
    name <NamedIdentifierIndex> (112)
        on left: 164
        on right: 17 29 57 58 59 60 69 72 81 82 83 84 92 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 115 116 119 120 123 124 125
    binary_op.raw <SelectorIndex> (113)
        on left: 165 166 167 168 169 170 171 172
        on right: 30 173
    binary_op.no_adverb <SelectorIndex> (114)
        on left: 173 174
        on right: 54 55 56 175 176
    binary_op <SelectorMaybeAdverbIndex> (115)
        on left: 175 176
        on right: 80
    semicolon.opt (116)
        on left: 177 178
        on right: 1 28 31 33 43 91
    comma.opt (117)
        on left: 179 180
        on right: 108 109 110 111 112 114 118 128 134 158 159 160
    ascii <ASCIIIndex> (118)
        on left: 181
        on right: 144
    nil <NilLitIndex> (119)
        on left: 182
        on right: 143
    boolean <BooleanLitIndex> (120)
        on left: 183 184
        on right: 142
    symbol <SymbolLitIndex> (121)
        on left: 185 186
        on right: 138
    string <StringLitIndex> (122)
        on left: 187 188
        on right: 139 188
    integer <IntLitIndex> (123)
        on left: 189 190 191 192
        on right: 93 140 192 206
    float.raw_unsigned <FloatLitIndex> (124)
        on left: 193 194 195 196
        on right: 197 198
    float.raw <FloatLitIndex> (125)
        on left: 197 198
        on right: 203 205
    accidental.unsigned <AccidentalLitIndex> (126)
        on left: 199 200
        on right: 201 202
    accidental <AccidentalLitIndex> (127)
        on left: 201 202
        on right: 204
    float <FloatProducingIndex> (128)
        on left: 203 204 205 206 207 208
        on right: 141
    accessor <ReadWriteAccessor> (129)
        on left: 209 210 211 212
        on right: 19


State 0

    0 $accept: • go $end

    CLASSNAME  shift, and go to state 1
    INTERPRET  shift, and go to state 2
    ADD        shift, and go to state 3

    go                   go to state 4
    classOrExtList.list  go to state 5
    classOrExtList.item  go to state 6
    class                go to state 7
    class.extension      go to state 8


State 1

   13 class: CLASSNAME • class.slot.opt class.super.opt OPENCURLY class.vars.opt method.list.opt CLOSECURLY

    OPENSQUARE  shift, and go to state 9

    $default  reduce using rule 16 (class.slot.opt)

    class.slot.opt  go to state 10


State 2

    1 go: INTERPRET • region semicolon.opt

    error             shift, and go to state 11
    OPENCURLY         shift, and go to state 12
    OPENSQUARE        shift, and go to state 13
    OPENPAREN         shift, and go to state 14
    HASH              shift, and go to state 15
    TILDE             shift, and go to state 16
    NAME              shift, and go to state 17
    INTEGER           shift, and go to state 18
    INTEGER_RADIX     shift, and go to state 19
    HEXADECIMAL       shift, and go to state 20
    FLOAT             shift, and go to state 21
    FLOAT_RADIX       shift, and go to state 22
    FLOAT_EXPONENT    shift, and go to state 23
    FLOAT_INF         shift, and go to state 24
    ACCIDENTAL_STEPS  shift, and go to state 25
    ACCIDENTAL_CENTS  shift, and go to state 26
    SYMBOL_QUOTE      shift, and go to state 27
    SYMBOL_SLASH      shift, and go to state 28
    STRINGLINE        shift, and go to state 29
    ASCII             shift, and go to state 30
    CLASSNAME         shift, and go to state 31
    NIL               shift, and go to state 32
    TRUE              shift, and go to state 33
    FALSE             shift, and go to state 34
    PI                shift, and go to state 35
    BEGINCLOSEDFUNC   shift, and go to state 36
    MINUS             shift, and go to state 37
    BACKTICK          shift, and go to state 38

    region               go to state 39
    expr.error           go to state 40
    block.open           go to state 41
    block                go to state 42
    msgsend              go to state 43
    expr.base            go to state 44
    expr                 go to state 45
    literal.terminal     go to state 46
    literal.dictionary   go to state 47
    literal.array        go to state 48
    literal              go to state 49
    name                 go to state 50
    ascii                go to state 51
    nil                  go to state 52
    boolean              go to state 53
    symbol               go to state 54
    string               go to state 55
    integer              go to state 56
    float.raw_unsigned   go to state 57
    float.raw            go to state 58
    accidental.unsigned  go to state 59
    accidental           go to state 60
    float                go to state 61


State 3

   18 class.extension: ADD • CLASSNAME OPENCURLY method.list.opt CLOSECURLY

    CLASSNAME  shift, and go to state 62


State 4

    0 $accept: go • $end

    $end  shift, and go to state 63


State 5

    2 go: classOrExtList.list •
   10 classOrExtList.list: classOrExtList.list • classOrExtList.item

    CLASSNAME  shift, and go to state 1
    ADD        shift, and go to state 3

    $default  reduce using rule 2 (go)

    classOrExtList.item  go to state 64
    class                go to state 7
    class.extension      go to state 8


State 6

    9 classOrExtList.list: classOrExtList.item •

    $default  reduce using rule 9 (classOrExtList.list)


State 7

   11 classOrExtList.item: class •

    $default  reduce using rule 11 (classOrExtList.item)


State 8

   12 classOrExtList.item: class.extension •

    $default  reduce using rule 12 (classOrExtList.item)


State 9

   17 class.slot.opt: OPENSQUARE • name CLOSESQUARE

    NAME  shift, and go to state 17

    name  go to state 65


State 10

   13 class: CLASSNAME class.slot.opt • class.super.opt OPENCURLY class.vars.opt method.list.opt CLOSECURLY

    COLON  shift, and go to state 66

    $default  reduce using rule 14 (class.super.opt)

    class.super.opt  go to state 67


State 11

    8 expr.error: error •

    $default  reduce using rule 8 (expr.error)


State 12

   41 block.open: OPENCURLY •

    $default  reduce using rule 41 (block.open)


State 13

  159 literal.array: OPENSQUARE • literal.array.contents comma.opt CLOSESQUARE

    OPENCURLY         shift, and go to state 12
    OPENSQUARE        shift, and go to state 13
    OPENPAREN         shift, and go to state 14
    HASH              shift, and go to state 15
    TILDE             shift, and go to state 16
    NAME              shift, and go to state 17
    INTEGER           shift, and go to state 18
    INTEGER_RADIX     shift, and go to state 19
    HEXADECIMAL       shift, and go to state 20
    FLOAT             shift, and go to state 21
    FLOAT_RADIX       shift, and go to state 22
    FLOAT_EXPONENT    shift, and go to state 23
    FLOAT_INF         shift, and go to state 24
    ACCIDENTAL_STEPS  shift, and go to state 25
    ACCIDENTAL_CENTS  shift, and go to state 26
    SYMBOL_QUOTE      shift, and go to state 27
    SYMBOL_SLASH      shift, and go to state 28
    STRINGLINE        shift, and go to state 29
    ASCII             shift, and go to state 30
    CLASSNAME         shift, and go to state 31
    NIL               shift, and go to state 32
    TRUE              shift, and go to state 33
    FALSE             shift, and go to state 34
    PI                shift, and go to state 35
    BEGINCLOSEDFUNC   shift, and go to state 36
    KEYBINOP          shift, and go to state 68
    MINUS             shift, and go to state 37
    BACKTICK          shift, and go to state 38

    $default  reduce using rule 146 (literal.array.contents)

    block.open              go to state 41
    block                   go to state 42
    msgsend                 go to state 43
    expr.base               go to state 44
    expr                    go to state 69
    expr.seq.base           go to state 70
    expr.seq                go to state 71
    literal.terminal        go to state 46
    literal.array.contents  go to state 72
    literal.dictionary      go to state 47
    literal.array           go to state 48
    literal                 go to state 49
    name                    go to state 50
    ascii                   go to state 51
    nil                     go to state 52
    boolean                 go to state 53
    symbol                  go to state 54
    string                  go to state 55
    integer                 go to state 56
    float.raw_unsigned      go to state 57
    float.raw               go to state 58
    accidental.unsigned     go to state 59
    accidental              go to state 60
    float                   go to state 61


State 14

   54 msgsend: OPENPAREN • binary_op.no_adverb CLOSEPAREN OPENPAREN arguments CLOSEPAREN block.opt_list
   55        | OPENPAREN • binary_op.no_adverb CLOSEPAREN OPENPAREN CLOSEPAREN block.list
   56        | OPENPAREN • binary_op.no_adverb CLOSEPAREN block.list
   71 expr.base: OPENPAREN • expr.seq CLOSEPAREN
  158 literal.dictionary: OPENPAREN • literal.dictionary.entries comma.opt CLOSEPAREN

    OPENCURLY         shift, and go to state 12
    OPENSQUARE        shift, and go to state 13
    OPENPAREN         shift, and go to state 14
    HASH              shift, and go to state 15
    TILDE             shift, and go to state 16
    NAME              shift, and go to state 17
    INTEGER           shift, and go to state 18
    INTEGER_RADIX     shift, and go to state 19
    HEXADECIMAL       shift, and go to state 20
    FLOAT             shift, and go to state 21
    FLOAT_RADIX       shift, and go to state 22
    FLOAT_EXPONENT    shift, and go to state 23
    FLOAT_INF         shift, and go to state 24
    ACCIDENTAL_STEPS  shift, and go to state 25
    ACCIDENTAL_CENTS  shift, and go to state 26
    SYMBOL_QUOTE      shift, and go to state 27
    SYMBOL_SLASH      shift, and go to state 28
    STRINGLINE        shift, and go to state 29
    ASCII             shift, and go to state 30
    CLASSNAME         shift, and go to state 31
    NIL               shift, and go to state 32
    TRUE              shift, and go to state 33
    FALSE             shift, and go to state 34
    PI                shift, and go to state 35
    BEGINCLOSEDFUNC   shift, and go to state 36
    BINOP             shift, and go to state 73
    KEYBINOP          shift, and go to state 74
    MINUS             shift, and go to state 75
    LESSTHAN          shift, and go to state 76
    GREATERTHAN       shift, and go to state 77
    MULTIPLY          shift, and go to state 78
    ADD               shift, and go to state 79
    PIPE              shift, and go to state 80
    READWRITEVAR      shift, and go to state 81
    BACKTICK          shift, and go to state 38

    $default  reduce using rule 155 (literal.dictionary.entries)

    block.open                  go to state 41
    block                       go to state 42
    msgsend                     go to state 43
    expr.base                   go to state 44
    expr                        go to state 69
    expr.seq.base               go to state 70
    expr.seq                    go to state 82
    literal.terminal            go to state 46
    literal.dictionary.entry    go to state 83
    literal.dictionary.entries  go to state 84
    literal.dictionary          go to state 47
    literal.array               go to state 48
    literal                     go to state 49
    name                        go to state 50
    binary_op.raw               go to state 85
    binary_op.no_adverb         go to state 86
    ascii                       go to state 51
    nil                         go to state 52
    boolean                     go to state 53
    symbol                      go to state 54
    string                      go to state 55
    integer                     go to state 56
    float.raw_unsigned          go to state 57
    float.raw                   go to state 58
    accidental.unsigned         go to state 59
    accidental                  go to state 60
    float                       go to state 61


State 15

  160 literal.array: HASH • OPENSQUARE literal.array.contents comma.opt CLOSESQUARE

    OPENSQUARE  shift, and go to state 87


State 16

   72 expr.base: TILDE • name
   82 expr: TILDE • name EQUALSSIGN expr

    NAME  shift, and go to state 17

    name  go to state 88


State 17

  164 name: NAME •

    $default  reduce using rule 164 (name)


State 18

  189 integer: INTEGER •

    $default  reduce using rule 189 (integer)


State 19

  190 integer: INTEGER_RADIX •

    $default  reduce using rule 190 (integer)


State 20

  191 integer: HEXADECIMAL •

    $default  reduce using rule 191 (integer)


State 21

  193 float.raw_unsigned: FLOAT •

    $default  reduce using rule 193 (float.raw_unsigned)


State 22

  194 float.raw_unsigned: FLOAT_RADIX •

    $default  reduce using rule 194 (float.raw_unsigned)


State 23

  195 float.raw_unsigned: FLOAT_EXPONENT •

    $default  reduce using rule 195 (float.raw_unsigned)


State 24

  196 float.raw_unsigned: FLOAT_INF •

    $default  reduce using rule 196 (float.raw_unsigned)


State 25

  199 accidental.unsigned: ACCIDENTAL_STEPS •

    $default  reduce using rule 199 (accidental.unsigned)


State 26

  200 accidental.unsigned: ACCIDENTAL_CENTS •

    $default  reduce using rule 200 (accidental.unsigned)


State 27

  185 symbol: SYMBOL_QUOTE •

    $default  reduce using rule 185 (symbol)


State 28

  186 symbol: SYMBOL_SLASH •

    $default  reduce using rule 186 (symbol)


State 29

  187 string: STRINGLINE •

    $default  reduce using rule 187 (string)


State 30

  181 ascii: ASCII •

    $default  reduce using rule 181 (ascii)


State 31

   64 msgsend: CLASSNAME • OPENSQUARE literal.array.contents CLOSESQUARE
   65        | CLASSNAME • block.list
   66        | CLASSNAME • OPENPAREN arguments CLOSEPAREN block.opt_list
   67        | CLASSNAME • OPENPAREN CLOSEPAREN block.opt_list
   76 expr: CLASSNAME •

    OPENCURLY        shift, and go to state 12
    OPENSQUARE       shift, and go to state 89
    OPENPAREN        shift, and go to state 90
    BEGINCLOSEDFUNC  shift, and go to state 36

    $default  reduce using rule 76 (expr)

    block.open  go to state 41
    block       go to state 91
    block.list  go to state 92


State 32

  182 nil: NIL •

    $default  reduce using rule 182 (nil)


State 33

  183 boolean: TRUE •

    $default  reduce using rule 183 (boolean)


State 34

  184 boolean: FALSE •

    $default  reduce using rule 184 (boolean)


State 35

  207 float: PI •

    $default  reduce using rule 207 (float)


State 36

   42 block.open: BEGINCLOSEDFUNC •

    $default  reduce using rule 42 (block.open)


State 37

  192 integer: MINUS • integer
  198 float.raw: MINUS • float.raw_unsigned
  202 accidental: MINUS • accidental.unsigned
  208 float: MINUS • PI

    INTEGER           shift, and go to state 18
    INTEGER_RADIX     shift, and go to state 19
    HEXADECIMAL       shift, and go to state 20
    FLOAT             shift, and go to state 21
    FLOAT_RADIX       shift, and go to state 22
    FLOAT_EXPONENT    shift, and go to state 23
    FLOAT_INF         shift, and go to state 24
    ACCIDENTAL_STEPS  shift, and go to state 25
    ACCIDENTAL_CENTS  shift, and go to state 26
    PI                shift, and go to state 93
    MINUS             shift, and go to state 94

    integer              go to state 95
    float.raw_unsigned   go to state 96
    accidental.unsigned  go to state 97


State 38

   79 expr: BACKTICK • expr
